index new pages

--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@
 <div class="jumbotron" style="margin-bottom: 0px;">
  <div class="row" style="display: flex;">
   <div class="col-md-5" align="center">
-        <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
+       <img id="profilepic0"  itemprop="image" src="imgs/index000.jpg" style="width: 66.5%;display: none;" class="img-responsive center_image" alt="Portrait of Josu&eacute; Tonelli-Cueto by Emmi Arvidsson." onclick="changeProfileImage()"/>
+       <img id="profilepic1" itemprop="image" src="imgs/index001.png" style="width: 80%;display: none;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at TU Berlin by Evgeniya Lagoda." onclick="changeProfileImage()"/>
+       <img id="profilepic2" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;display: none;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier." onclick="changeProfileImage()"/>
+       <img id="profilepic3" itemprop="image" src="imgs/index003.png" style="width: 64.4%;display: none;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto with Gato Suchen by Evgeniya Lagoda." onclick="changeProfileImage()"/>
+       <img id="profilepic4" itemprop="image" src="imgs/index004.png" style="width: 66.5%;display: block;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto with a telephone by Evgeniya Lagoda." onclick="changeProfileImage()"/>
+
+       <img id="profilepicclicks0" itemprop="image" src="imgs/indexclicks.jpg" style="width: 62.7%;display: none;" class="img-responsive center_image" alt="Gato Suchen saying that there are no more clicks." onclick="changeProfileImage()"/>
+       <img id="profilepicclicks1" itemprop="image" src="imgs/indexclicks1.jpg" style="width: 73.5%;display: none;" class="img-responsive center_image" alt="Gato Suchen peeing and asking why the person is still clicking." onclick="changeProfileImage()"/>
   </div>
   <div class="col-md-7" style="text-align:center;">
 
@@ -150,7 +157,14 @@
 <footer style="padding-top:1em;">
     <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
-    <p style="text-align:left;margin-top:0;padding-top:0;" id="copyrightimage">&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage0">&emsp;&emsp;Portrait by Emmi Arvidsson.</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage1">&emsp;&emsp;Portrait by Evgeniya Lagoda.</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage2">&emsp;&emsp;Portrait by B. Fourrier (&copy; Inria).</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage3">&emsp;&emsp;Portrait by Evgeniya Lagoda</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:block;" id="copyrightimage4">&emsp;&emsp;Portrait by Evgeniya Lagoda</p>
+
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimageclicks0">&emsp;&emsp;Picture by Josu&eacute; Tonelli-Cueto</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimageclicks1">&emsp;&emsp;Picture by Josu&eacute; Tonelli-Cueto</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
@@ -164,50 +178,80 @@
     <!-- change of profile image -->
     <script type="text/javascript">
     <!--
-    let count=0;
-    let profimgs=3;
-    let lim=3*profimgs;
+    let count=-1;
+    let profimgs=4;
+    let rand=Math.floor(Math.random() * (profimgs+1))%(profimgs+1);
+    let lim=4*(profimgs+1);
     function changeProfileImage() {
     count++;
     if (count < lim){
-     if (count%profimgs == 2)
+      document.getElementById("profilepic0").style.display="none";
+      document.getElementById("copyrightimage0").style.display="none";
+      document.getElementById("profilepic1").style.display="none";
+      document.getElementById("copyrightimage1").style.display="none";
+      document.getElementById("profilepic2").style.display="none";
+      document.getElementById("copyrightimage2").style.display="none";
+      document.getElementById("profilepic3").style.display="none";
+      document.getElementById("copyrightimage3").style.display="none";
+      document.getElementById("profilepic4").style.display="none";
+      document.getElementById("copyrightimage4").style.display="none";
+
+     if (count > 0){rand=(Math.floor(Math.random() * profimgs)+1+rand)%(profimgs+1);}
+
+     if (rand==0)
      {
-         document.getElementById("profilepic").style="width: 66.5%;"
-         document.getElementById("profilepic").src = "imgs/index001.jpg";
-         document.getElementById("profilepic").alt = "Portrait of Josu&eacute; Tonelli-Cueto by Emmi Arvidsson";
-         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Emmi Arvidsson";
+       document.getElementById("profilepic0").style.display="block";
+       document.getElementById("copyrightimage0").style.display="block";
      }
-     else if (count%profimgs == 0)
+     else if (rand==1)
      {
-         document.getElementById("profilepic").style="width: 66.5%;"
-         document.getElementById("profilepic").src = "imgs/index002.jpg";
-         document.getElementById("profilepic").alt = "Picture of Josu&eacute; Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier";
-         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier";
+       document.getElementById("profilepic1").style.display="block";
+       document.getElementById("copyrightimage1").style.display="block";
      }
-     else if (count%profimgs == 1)
+     else if (rand==2)
      {
-         document.getElementById("profilepic").style="width: 80%;"
-         document.getElementById("profilepic").src = "imgs/index000.png";
-         document.getElementById("profilepic").alt = "Picture of Josu&eacute; Tonelli-Cueto at TU Berlin";
-         document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Evgeniya Lagoda";
+       document.getElementById("profilepic2").style.display="block";
+       document.getElementById("copyrightimage2").style.display="block";
+     }
+     else if (rand==3)
+     {
+       document.getElementById("profilepic3").style.display="block";
+       document.getElementById("copyrightimage3").style.display="block";
+     }
+     else if (rand==4)
+     {
+       document.getElementById("profilepic4").style.display="block";
+       document.getElementById("copyrightimage4").style.display="block";
      }
     }
     else if (count == lim)
     {
-        document.getElementById("profilepic").style="width: 62.7%;"
-        document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
-        document.getElementById("profilepic").alt = "Gato Suchen saying that there are no more clicks";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josu&eacute; Tonelli-Cueto";
+        document.getElementById("profilepic0").style.display="none";
+        document.getElementById("copyrightimage0").style.display="none";
+        document.getElementById("profilepic1").style.display="none";
+        document.getElementById("copyrightimage1").style.display="none";
+        document.getElementById("profilepic2").style.display="none";
+        document.getElementById("copyrightimage2").style.display="none";
+        document.getElementById("profilepic3").style.display="none";
+        document.getElementById("copyrightimage3").style.display="none";
+        document.getElementById("profilepic4").style.display="none";
+        document.getElementById("copyrightimage4").style.display="none";
+
+        document.getElementById("profilepicclicks0").style.display="block";
+        document.getElementById("copyrightimageclicks0").style.display="block";
     }
-    else if (count == 5*profimgs)
+    else if (count == lim +10)
     {
-        document.getElementById("profilepic").style="width: 73.5%;"
-        document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
-        document.getElementById("profilepic").alt = "Gato Suchen peeing";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josu&eacute; Tonelli-Cueto";
+       document.getElementById("profilepicclicks0").style.display="none";
+       document.getElementById("copyrightimageclicks0").style.display="none";
+
+       document.getElementById("profilepicclicks1").style.display="block";
+       document.getElementById("copyrightimageclicks1").style.display="block";
     }
     else {}
     }
+
+    window.onload = changeProfileImage;
     //-->
     </script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -230,7 +274,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Postdoc at<br/><a href="https://www.utsa.edu/">UT San Antonio</a>';
+    x[0].innerHTML='Postdoc at<br/><a href="https://www.jhu.edu/">John Hopkins University</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
