--- a/index_es.html
+++ b/index_es.html
@@ -272,7 +272,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Postdoc en<br/><a href="https://www.jhu.edu/">John Hopkins University</a>';
+    x[0].innerHTML='Rufus Isaacs Postdoctoral Fellow<br/>en <a href="https://www.jhu.edu/">John Hopkins University</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
