--- a/cv_es.html
+++ b/cv_es.html
@@ -157,9 +157,9 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2023-2X</h4></div><div class="title"><h4>&emsp;Rufus Isaacs Postdoctoral Fellow en la <a href="https://www.jhu.edu/">John Hopkins University</a></h4></div>
+      <div class="year"><h4>2023-2X</h4></div><div class="title"><h4>&emsp;Rufus Isaacs Postdoctoral Fellow en la <a href="https://www.jhu.edu/">Johns Hopkins University</a></h4></div>
         <div class="property">Mentora:</div><div class="value"> <a href="https://www.ams.jhu.edu/villar/">Soledad Villar</a></div>
-        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.jhu.edu/">John Hopkins University (JHU)</a></div>
+        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.jhu.edu/">Johns Hopkins University (JHU)</a></div>
         <div class="property">Duraci&oacute;n:</div><div class="value">agosto 2023 - agosto 202X</div>
       </div>
 
@@ -873,8 +873,8 @@
       <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://www.minds.jhu.edu/event/minds-cis-fall-seminar-series-josue-tonelli-cueto/?instance_id=577">MINDS &#38; CIS Fall Seminar Series</a><span style="float:right;"><a href="pdf/22MINDSseminartalk_slides.pdf">Diapositivas</a></span></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Serie de Seminarios del MINDS y el CIS)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and Probability for Explaining Algorithms in Computational Geometry</div>
-        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> en <a href="https://www.jhu.edu/">John Hopkins University</a></div>
-        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> en <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> en <a href="https://www.jhu.edu/">Johns Hopkins University</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> en <a href="https://www.jhu.edu/">Johns Hopkins University</a></div>
         <div class="property">Lugar:</div><div class="value">Baltimore, EEUU</div>
         <div class="property">Date:</div><div class="value">6 de setiembre del 2022</div>
       </div>
