--- a/cv.html
+++ b/cv.html
@@ -152,9 +152,9 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2023-2X</h4></div><div class="title"><h4>&emsp;Rufus Isaacs Postdoctoral Fellow at <a href="https://www.jhu.edu/">John Hopkins University</a></h4></div>
+      <div class="year"><h4>2023-2X</h4></div><div class="title"><h4>&emsp;Rufus Isaacs Postdoctoral Fellow at <a href="https://www.jhu.edu/">Johns Hopkins University</a></h4></div>
         <div class="property">Mentor:</div><div class="value"> <a href="https://www.ams.jhu.edu/villar/">Soledad Villar</a></div>
-        <div class="property">Institution:</div><div class="value"><a href="https://www.jhu.edu/">John Hopkins University (JHU)</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.jhu.edu/">Johns Hopkins University (JHU)</a></div>
         <div class="property">Duration:</div><div class="value">August 2023 - August 202X</div>
       </div>
 
@@ -858,8 +858,8 @@
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="https://www.minds.jhu.edu/event/minds-cis-fall-seminar-series-josue-tonelli-cueto/?instance_id=577">MINDS &#38; CIS Fall Seminar Series</a><span style="float:right;"><a href="pdf/22MINDSseminartalk_slides.pdf">Slides</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and Probability for Explaining Algorithms in Computational Geometry</div>
-        <div class="property">Institution:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> at <a href="https://www.jhu.edu/">John Hopkins University</a></div>
-        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> at <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> at <a href="https://www.jhu.edu/">Johns Hopkins University</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> at <a href="https://www.jhu.edu/">Johns Hopkins University</a></div>
         <div class="property">Location:</div><div class="value">Baltimore, USA</div>
         <div class="property">Date:</div><div class="value">6th of September of 2022</div>
       </div>
