--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
-        <h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>at <a href="https://www.jhu.edu/">John Hopkins University</a></h3>
+        <h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>at <a href="https://www.jhu.edu/">Johns Hopkins University</a></h3>
         <!--<h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>-->
 
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;"><!--3vw padding top if not searching for a job, 1vw otherwise!-->
@@ -274,7 +274,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Rufus Isaacs Postdoctoral Fellow<br/>at <a href="https://www.jhu.edu/">John Hopkins University</a>';
+    x[0].innerHTML='Rufus Isaacs Postdoctoral Fellow<br/>at <a href="https://www.jhu.edu/">Johns Hopkins University</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
