--- a/index_es.html
+++ b/index_es.html
@@ -155,7 +155,7 @@
 <footer style="padding-top:1em;">
     <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
-    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage0">&emsp;&emsp;Retrato hecho por Emmi Arvidsson.</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage0">&emsp;&emsp;Retrato hecho por <a href="https://www.emeliearvidsson.com/">Emmi Arvidsson</a>.</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage1">&emsp;&emsp;Retrato tomado por Evgeniya Lagoda.</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage2">&emsp;&emsp;Retrato tomado por B. Fourrier (&copy; Inria).</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage3">&emsp;&emsp;Retrato tomado por Evgeniya Lagoda</p>
