--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <footer style="padding-top:1em;">
     <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
-    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage0">&emsp;&emsp;Portrait by Emmi Arvidsson.</p>
+    <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage0">&emsp;&emsp;Portrait by <a href="https://www.emeliearvidsson.com/">Emmi Arvidsson</a>.</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage1">&emsp;&emsp;Portrait by Evgeniya Lagoda.</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage2">&emsp;&emsp;Portrait by B. Fourrier (&copy; Inria).</p>
     <p style="text-align:left;margin-top:0;padding-top:0;display:none;" id="copyrightimage3">&emsp;&emsp;Portrait by Evgeniya Lagoda</p>
