--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
-    <meta property="og:url" content="https://tonellicueto.xyz/course.html" />
+    <meta property="og:url" content="https://tonellicueto.xyz/UTSA_MAT1224_spring2023.html" />
     <meta property="og:title" content="Calc II at UTSA by Dr. J. Tonelli-Cueto" /><!--35char-->
     <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Dr. Josu&eacute; Tonelli-Cueto in Spring 2023"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4UTSA.png"><!--300KB and minimum dimensions of 300 x 200-->
@@ -91,7 +91,7 @@
            <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
            <li class="nav-item"><a class="nav-link" href="#exams">Exams</a></li>
            <li class="nav-item"><a class="nav-link" href="#tutoring">Tutoring & Homework Sessions</a></li>
-           <li class="nav-item"><a class="nav-link" href="#handouts">Other Materials</a></li>
+           <li class="nav-item"><a class="nav-link" href="#handouts">Extra Materials</a></li>
         </ul>
     </nav>
 </div>
