--- a/cv.html
+++ b/cv.html
@@ -1128,10 +1128,21 @@
         <!-- 2023
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+           <br/><div class="cv">
+           <div class="year">
+             <h4>2023</h4>
+           </div><div class="title">
+           <h4>&emsp;<i>Probability</i> (2 instruction groups)<span style="float:right;"><a href="JHU_probability_fall2023.html">Course Website</a></span></h4></div>
+           <div class="year"></div><div class="title">
+           <h4>&emsp;&ensp;(553.420.01 & 553.420.02) (553.420.03, 553.420.04 & 553.620.01)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">Course Website</a></span></h4></div>
+             <div class="property">Role:</div><div class="value">Instructor</div>
+             <div class="property">Teaching load:</div><div class="value">Approximately 80 hours (40 hours/course)</div>
+             <div class="property">Institution:</div><div class="value"><a href="https://www.jhu.edu/">The Johns Hopkins University</a></div>
+             <div class="property">Date:</div><div class="value">August 2023 - December 2023</div>
+           </div>
+
           <br/><div class="cv">
-          <div class="year">
-            <h4>2023</h4>
-          </div><div class="title">
+          <div class="year"></div><div class="title">
           <h4>&emsp;<i>Calculus II</i> (MATH 1224)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">Course Website</a></span></h4></div>
             <div class="property">Role:</div><div class="value">Instructor</div>
             <div class="property">Teaching load:</div><div class="value">Approximately 60 hours</div>
@@ -2001,7 +2012,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2025</h4>
 </div><div class="title">
-<h4>&emsp;<a href="https://jovenesrsme2025.github.io/">VII Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+<h4>&emsp;<a href="https://jovenes2025.rsme.es/">VII Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(RSME's 7th Congress of Young Researchers)</em></h4></div>
   <div class="property">Organizer:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
