--- a/cv_es.html
+++ b/cv_es.html
@@ -1154,6 +1154,19 @@
       <!-- 2023
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+           <br/><div class="cv">
+           <div class="year">
+             <h4>2023</h4>
+           </div><div class="title">
+           <h4>&emsp;<i>Probability</i> (2 instruction groups)<span style="float:right;"><a href="JHU_probability_fall2023.html">P&aacute;gina del Curso</a></span></h4></div>
+           <div class="year"></div><div class="title">
+           <h4>&emsp;&ensp;(553.420.01 & 553.420.02) (553.420.03, 553.420.04 & 553.620.01)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">Course Website</a></span></h4></div>
+             <div class="property">Labor:</div><div class="value">Instructor</div>
+             <div class="property">Carga docente:</div><div class="value">Aproximadamente 80 horas (40 horas/curso)</div>
+             <div class="property">Institution:</div><div class="value"><a href="https://www.jhu.edu/">The Johns Hopkins University</a></div>
+             <div class="property">Fecha:</div><div class="value">agosto 2023 - diciembre 2023</div>
+           </div>
+
 
            <br/><div class="cv">
            <div class="year">
@@ -2025,7 +2038,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 	 <div class="year">
    <h4>2025</h4>
 	 </div><div class="title">
-	 <h4>&emsp;<a href="https://jovenesrsme2025.github.io/">VII Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+	 <h4>&emsp;<a href="https://jovenes2025.rsme.es/">VII Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
 	   <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
 	   <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.ehu.eus/">Universidad del Pa&iacute;s Vasco/Euskal Herriko Unibertsitatea (UPV/EHU)</a></div>
      <div class="property"></div><div class="value"><a href="http://www.bcamath.org/en/">Basque Center for Applied Mathematics (BCAM)</a></div>
