--- a/research.html
+++ b/research.html
@@ -168,28 +168,43 @@
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://tolischal.github.io/">Apostolos Chalkis</a> and <a href="https://webusers.imj-prg.fr/~christina.katsamaki/">Christina Katsamaki</a>)</div>
  </div>-->
 
+ <br/><div class="cv">
+  <div class="year"><h4>2024</h4></div><div class="paper"><h4>&emsp;Learning equivariant tensor functions<br/>&emsp;with applications to sparse vector recovery<a class="btn btn-arxiv" href="https://arxiv.org/abs/2406.01552" role="button">arXiv:2406.01552</a></h4></div>
+  <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.cis.jhu.edu/~wgregor4/">Wilson G. Gregory</a>, <a href="https://nicholasmarshall.info/">Nicholas F. Marshall</a>, <a href="https://stac.edu/directory/lee-andrew/">Andrew S. Lee</a> and <a href="https://www.ams.jhu.edu/villar/">Soledad Villar</a>)</div>
+ </div>
+
+ <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;Some Lower Bounds on the Reach of an Algebraic Variety<a class="btn btn-arxiv" href="https://arxiv.org/abs/2402.15649" role="button">arXiv:2402.15649</a></h4></div>
+  <div class="pretalktitle"></div><div class="collaborator">(Together with Chris La Valle)</div>
+ </div>
+
   <br/><div class="cv">
-   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://page.math.tu-berlin.de/~radons/">Manuel Radons</a>)</div>
+   <div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Sparse Polynomial Systems<a class="btn btn-arxiv" href="https://arxiv.org/abs/2306.06784" role="button">arXiv:2306.06784</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://matetelek.wordpress.com/">M&aacute;t&eacute; L. Telek</a>)</div>
   </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
    <div class="pretalktitle"></div>
   </div>
-
-	<br/><div class="cv">
-	 <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
-	 <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
-	</div>
 
 </div>
 <hr>
 <div id="journalpapers">
   <h2 class="display-4">Journal papers</h2>
 
+   <br/><div class="cv">
+    <div class="year"><h4>2024</h4></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
+    <div class="pretalktitle"></div><div class="collaborator">Kh. Kozhasov and J. Tonelli-Cueto. Probabilistic bounds on best rank-one approximation ratio, <i>Linear and Multilinear Algebra</i>, 2024. On-line. <span><a href="https://doi.org/10.1080/03081087.2024.2304146">DOI 10.1080/03081087.2024.2304146</a></span></div>
+   </div>
+
+   <br/><div class="cv">
+   <div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">M. Radons and J. Tonelli-Cueto. Generalized Perron Roots and Solvability of the Absolute Value Equation, <i>SIAM Journal on Matrix Analysis and Applications</i>, 44(4):1645-1666, 2023. <span><a href="https://doi.org/10.1137/22M1517184">DOI 10.1137/22M1517184</a></span></div>
+  </div>
+
 	<br/><div class="cv">
-	<div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+	<div class="year"></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
 	 <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces, <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></span></div>
 	 <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em> in the Special Issue of ISSAC'20.</div>
 	</div>
