--- a/cv_es.html
+++ b/cv_es.html
@@ -1666,12 +1666,15 @@
    <div class="year"></div><div class="title">
    &ensp;&emsp;<em>(Revisiones en curso y terminadas ordenadas alfab&eacute;ticamente)</em></div>
      <div class="property">Revista:</div><div class="value"><a href="https://www.springer.com/journal/10472">Annals of Mathematics and Artificial Intelligence</a></div>
+     <div class="property"></div><div class="value"><a href="https://link.springer.com/journal/454">Discrete &amp; Computational Mathematics</a></div>
      <div class="property"></div><div class="value"><a href="https://www.cambridge.org/core/journals/forum-of-mathematics-sigma">Forum of Mathematics, Sigma</a></div>
      <div class="property"></div><div class="value"><a href="https://www.springer.com/journal/10208">Foundations of Computational Mathematics</a></div>
      <div class="property"></div><div class="value"><a href="https://www.journals.elsevier.com/journal-of-complexity">Journal of Complexity</a></div>
+     <div class="property"></div><div class="value"><a href="https://link.springer.com/journal/44007">La Matematica</a></div>
      <div class="property"></div><div class="value"><a href="https://www.ams.org/publications/journals/journalsframework/mcom">Mathematics of Computation</a></div>
      <div class="property"></div><div class="value"><a href="https://www.siam.org/publications/journals/siam-journal-on-applied-algebra-and-geometry-siaga">SIAM Journal on Applied Algebra and Geometry (SIAGA)</a></div>
-     <div class="property">Conferencia:</div><div class="value"><a href=#ISSAC2020>ISSAC2020</a></div>
+     <div class="property">Conferencia:</div><div class="value"><a href="https://www.issac-conference.org/2023/">ISSAC2023</a></div>
+     <div class="property"></div><div class="value"><a href=#ISSAC2020>ISSAC2020</a></div>
      <div class="property"></div><div class="value"><a href=#MEGA2019>MEGA2019</a></div>
      <div class="property">Otra:</div><div class="value"><a href="https://mathscinet.ams.org/">MathSciNet</a></div>
    </div>
@@ -1829,6 +1832,19 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <br/><div class="row"><div class="col-md-12">
       <h3>Premios</h3>
       </div></div>
+
+      <!-- 2023
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br/><div class="cv">
+         <div class="year">
+         <h4>2023</h4>
+         </div><div class="title">
+         <h4>&emsp;SIAM Travel Award</h4></div>
+           <div class="property">Descripci&oacute;n:</div><div class="value">Para asistir a la <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2023</a></div>
+           <div class="property">Instituci&oacute;n dadora:</div><div class="value"><a href="https://siam.org/">SIAM</a></div>
+           <div class="property">Fecha:</div><div class="value">julio del 2023</div>
+         </div>
 
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
