--- a/cv.html
+++ b/cv.html
@@ -1629,12 +1629,15 @@
 <div class="year"></div><div class="title">
 &ensp;&emsp;<em>(Current and past reviews in alphabetical order)</em></div>
   <div class="property">Journal:</div><div class="value"><a href="https://www.springer.com/journal/10472">Annals of Mathematics and Artificial Intelligence</a></div>
+  <div class="property"></div><div class="value"><a href="https://link.springer.com/journal/454">Discrete &amp; Computational Mathematics</a></div>
   <div class="property"></div><div class="value"><a href="https://www.cambridge.org/core/journals/forum-of-mathematics-sigma">Forum of Mathematics, Sigma</a></div>
   <div class="property"></div><div class="value"><a href="https://www.springer.com/journal/10208">Foundations of Computational Mathematics</a></div>
   <div class="property"></div><div class="value"><a href="https://www.journals.elsevier.com/journal-of-complexity">Journal of Complexity</a></div>
+  <div class="property"></div><div class="value"><a href="https://link.springer.com/journal/44007">La Matematica</a></div>
   <div class="property"></div><div class="value"><a href="https://www.ams.org/publications/journals/journalsframework/mcom">Mathematics of Computation</a></div>
   <div class="property"></div><div class="value"><a href="https://www.siam.org/publications/journals/siam-journal-on-applied-algebra-and-geometry-siaga">SIAM Journal on Applied Algebra and Geometry (SIAGA)</a></div>
-  <div class="property">Conference:</div><div class="value"><a href=#ISSAC2020>ISSAC2020</a></div>
+  <div class="property">Conference:</div><div class="value"><a href="https://www.issac-conference.org/2023/">ISSAC2023</a></div>
+  <div class="property"></div><div class="value"><a href=#ISSAC2020>ISSAC2020</a></div>
   <div class="property"></div><div class="value"><a href=#MEGA2019>MEGA2019</a></div>
   <div class="property">Other:</div><div class="value"><a href="https://mathscinet.ams.org/">MathSciNet</a></div>
 </div>
@@ -1791,6 +1794,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <br/><div class="row"><div class="col-md-12">
       <h3>Awards</h3>
       </div></div>
+
+      <!-- 2023
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br/><div class="cv">
+         <div class="year">
+         <h4>2023</h4>
+         </div><div class="title">
+         <h4>&emsp;SIAM Travel Award</h4></div>
+           <div class="property">Description:</div><div class="value">To attend the <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2023</a></div>
+           <div class="property">Awarding institution:</div><div class="value"><a href="https://siam.org/">SIAM</a></div>
+           <div class="property">Date:</div><div class="value">July of 2023</div>
+         </div>
+
 
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
